# try-actions

./: Cargo.toml  Cross.toml  Dockerfile  build.rs  pre-build.sh
.github/workflows/: build.yml  release.yml
proto/: prover.proto
src/: main.rs
src/message/: google.protobuf.rs  socket.rs
