[package]
name = "try-actions"
version = "0.1.0"
edition = "2021"

[dependencies]
# actix-multipart = "0.6.2"
# actix-web = "4.6.0"
# anyhow = "1.0.86"
# caves = "0.2.1"
# clap = "4.5.4"
# elliptic-curve = "0.13.8"
# eyre = "0.6.12"
# futures = "0.3"
# getrandom = "0.2.15"
# home = "0.5.9"
# hyper = "0.14"
# # notary-server = { git = "https://github.com/tlsnotary/tlsn", rev = "v0.1.0-alpha.6" }
# openssl = "0.10.64"
# p256 = "0.13.2"
# pathsearch = "0.2.0"
# prost = "0.12.6"
# prost-build = "0.12.6"
# protobuf-zmq-rust-generator = "0.1.1"
# rustls = "0.21"
# rustls-pemfile = "1.0.2"
# serde = "1.0.203"
# serde_json = "1.0.117"
# serde_yaml = "0.9.34"
# sha2 = "0.10.8"
# thiserror = "1.0.61"
# # tlsn-core = { git = "https://github.com/tlsnotary/tlsn", rev = "v0.1.0-alpha.6" }
# # tlsn-prover = { git = "https://github.com/tlsnotary/tlsn", rev = "v0.1.0-alpha.6" }
# tokio = "1.37.0"
# tokio-rustls = "0.24.1"
# tokio-util = "0.7"
# tracing = "0.1.40"
# tracing-subscriber = "0.3.18"
# url = "2.5.0"
# # verity-notary = { path = "./notary" }
# # verity-prover = { path = "./prover" }
# # verity-verifier = { path = "./verifier" }
# # verity-verifier-node = { path = "./verifier-node" }
# # zmq = "0.10.0"
